--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,6 @@ body {
   height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
   align-items: center;
   border: 1px solid #333;
   box-shadow: 0px 0px 5px gray;
@@ -59,7 +58,7 @@ body {
   transform: translateY(-50%);
 }
 .Footer {
-  font-size: 1.5rem;
+  font-size: 1rem;
   font-weight: 500;
 }
 .Nav {
@@ -71,7 +70,6 @@ body {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  gap: 10px;
 }
 .Nav li {
   font-size: 1.25rem;
@@ -110,6 +108,7 @@ body {
   flex-direction: column;
   gap: 0.5rem;
 }
+.UserData h1,
 .Missing h2,
 .Docs h2,
 .NewUser h2,
@@ -119,7 +118,7 @@ body {
 }
 .Missing p,
 .Docs p {
-  font-size: 1.25rem;
+  font-size: 0.9rem;
 }
 .newUserForm {
   display: flex;
@@ -129,7 +128,7 @@ body {
 .newUserForm textarea {
   font-family: "Open Sans", sans-serif;
   min-height: 36px;
-  font-size: 1.25rem;
+  font-size: 1rem;
   padding: 0.75rem;
   border-radius: 0.25rem;
   border: 2px solid #9e9e9e;
@@ -138,7 +137,7 @@ body {
   transition: 0.3s;
 }
 .newUserForm textarea {
-  height: 150px;
+  height: 125px;
 }
 .newUserForm input[type="text"]:focus,
 .newUserForm textarea:focus {
@@ -146,7 +145,7 @@ body {
 }
 .newUserForm input[type="text"]::placeholder,
 .newUserForm textarea::placeholder {
-  font-size: 1.25rem;
+  font-size: 1rem;
   letter-spacing: 1px;
 }
 .newUserForm button {
@@ -169,7 +168,7 @@ body {
   letter-spacing: 1px;
 }
 .newUserForm label {
-  font-size: 1.25rem;
+  font-size: 1rem;
   font-weight: 500;
   margin-top: 0.5rem;
 }
@@ -178,8 +177,12 @@ body {
   padding-bottom: 1rem;
   border-bottom: 1px solid lightgray;
 }
-.user p {
+.user h2 {
   font-size: 1rem;
+  font-weight: 600;
+}
+.user p {
+  font-size: 0.8rem;
 }
 .UserData .user a {
   text-decoration: none;
@@ -237,50 +240,24 @@ button {
   box-shadow: 0 0 6px #006fff;
   scale: 1.2;
 }
-.statusMsg {
-  margin-top: 2rem;
-}
 .Docs ul li {
   list-style: none;
+  font-size: 0.9rem;
 }
-@media (max-width: 768px) {
-  html {
-    font-size: 10px;
-  }
+@media (max-width: 500px) {
   .Header h1 {
     font-size: 1.75rem;
-  }
-  .Header p {
-    scale: 1.1;
-  }
-  .Nav {
-    align-items: center;
-  }
-  .Nav li {
-    font-size: 1.35rem;
-  }
-  .Nav li:hover a,
-  .Nav li:focus a {
     font-weight: 500;
   }
-
-  .Home p {
-    font-size: 1.25rem;
+  .Nav li {
+    font-size: 1rem;
   }
-  .NewUser h2 {
-    font-size: 1.75rem;
+  .Nav li a {
+    padding: 1rem;
   }
-  .newUserForm input[type="text"],
-  .newUserForm textarea {
-    font-size: 1.5rem;
-  }
-  .newUserForm textarea {
-    height: 100px;
-  }
-  .newUserForm label {
-    font-size: 1.35rem;
-  }
-  .UserPage p {
-    font-size: 1.25rem;
+}
+@media (max-width: 400px) {
+  .Nav li a {
+    padding: 0.5rem;
   }
 }
